--- a/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj
+++ b/backends/gdx-backend-wogl/proj/gdx-backend-wogl.vcxproj
@@ -49,7 +49,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>GLEW_BUILD;WIN32;_DEBUG;_WINDOWS;_USRDLL;GDXBACKENDWOGL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\gdx\exp;..\extern</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\gdx\include;..\extern</AdditionalIncludeDirectories>
       <ShowIncludes>false</ShowIncludes>
     </ClCompile>
     <Link>
@@ -67,7 +67,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>GLEW_BUILD;WIN32;NDEBUG;_WINDOWS;_USRDLL;GDXBACKENDWOGL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\gdx\exp;..\extern</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\gdx\include;..\extern</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
