--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj
@@ -49,7 +49,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\..\gdx\exp;..\..\..\..\backends\gdx-backend-wogl\exp</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\..\gdx\include;..\..\..\..\backends\gdx-backend-wogl\exp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -66,7 +66,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\..\gdx\exp;..\..\..\..\backends\gdx-backend-wogl\exp</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\incl;..\exp;..\..\..\..\gdx\include;..\..\..\..\backends\gdx-backend-wogl\exp</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
