--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
@@ -37,6 +37,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\incl\SpriteBatchTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\incl\MeshShaderTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -61,6 +63,8 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\SpriteBatchTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\MeshShaderTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
