--- a/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
+++ b/demos/helloworld/gdx-helloworld/proj/gdx-helloworld.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="..\incl\MeshShaderTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\incl\PixmapBlendingTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\gdx-helloworld.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\MeshShaderTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\PixmapBlendingTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
