--- a/tests/gdx-tests/proj/gdx-tests.vcxproj.filters
+++ b/tests/gdx-tests/proj/gdx-tests.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClInclude Include="..\include\TextureDataTest.h">
       <Filter>inlcude</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\MeshTest.h">
+      <Filter>inlcude</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\dllmain.cpp">
